<resources>
    <string name="app_name">EwaWeather</string>
    <string name="pressure">Pressure</string>
    <string name="humility">Humility</string>
    <string name="no_internet">No internet connection</string>
    <string name="image_day">image day</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="perm_denied">Permission denied</string>
    <string name="update_time">Update Time:</string>
    <string name="temp">Temperature is:</string>
</resources>